# RTES

./: .gitignore  API_SPECIFICATION.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  CMakeLists.txt  CONTRIBUTING.md  DEMO_PRODUCTION_READINESS.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_ANALYSIS_REPORT.md  INTERVIEW_PLAYBOOK.md  LICENSE  PERFORMANCE_BENCHMARKS.md  PRODUCTION_READINESS_REPORT.md  README.md  RTES_DEMO_GUIDE.md  SECURITY_FIXES.md  SYSTEM_STATUS.md  TESTING_QUICK_REFERENCE.md  TEST_SUITE_ADDED.md  TEST_SUITE_DOCUMENTATION.md  TODO.md  benchmark  benchmark.cpp  codebase_analysis  codebase_analysis.cpp  demo  demo.cpp  docker-compose.yml  make_history.sh  production_validation  production_validation.cpp  stress_test  stress_test.cpp  test_runner  test_runner.cpp
configs/: config.dev.json  config.json  config.prod.json
docker/: Dockerfile.dev  prometheus.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ERROR_HANDLING.md  INCIDENT_RESPONSE.md  INPUT_VALIDATION.md  MEMORY_SAFETY.md  NETWORK_SECURITY.md  OBSERVABILITY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_CHECKLIST.md  RUNBOOK.md  SECURITY.md  THREAD_SAFETY.md  TUNING.md  VERIFICATION.md
scripts/: bench_latency.sh  bench_throughput.sh  benchmark.sh  deploy.sh  production_deploy.sh  run_tests.sh  stress_test.sh  validate.sh
src/: auth_middleware.cpp  client_base.cpp  config.cpp  dashboard.cpp  deployment_manager.cpp  error_handling.cpp  exchange.cpp  http_server.cpp  input_validation.cpp  logger.cpp  main.cpp  matching_engine.cpp  memory_safety.cpp  metrics.cpp  monitoring.cpp  network_security.cpp  observability.cpp  order_book.cpp  performance_optimizer.cpp  production_readiness.cpp  protocol.cpp  risk_manager.cpp  secure_config.cpp  security_utils.cpp  strategies.cpp  tcp_gateway.cpp  thread_safety.cpp  transaction.cpp  udp_publisher.cpp
tests/: test_error_handling.cpp  test_http_server.cpp  test_input_validation.cpp  test_integration.cpp  test_integration_api.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_memory_safety.cpp  test_metrics.cpp  test_network_security.cpp  test_observability.cpp  test_order_book.cpp  test_performance_optimizer.cpp  test_performance_regression.cpp  test_production_readiness.cpp  test_queues.cpp  test_risk_manager.cpp  test_secure_config.cpp  test_security.cpp  test_strategies.cpp  test_tcp_gateway.cpp  (+3 more)
tools/: md_recv.py  (+9 more)
(+36 files in other folders)
